--- a/project6_analysis.ipynb
+++ b/project6_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "0"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "14244         0.00           NaN        NaN    NaN  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "         23,   24,   21,   17,   22,   13])"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "array(['E', nan, 'M', 'T', 'E10+', 'K-A', 'AO', 'EC', 'RP'], dtype=object)"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "4      0.14      0.00         0.03          -999        NaN    NaN  "
       ]
      },
-     "execution_count": 392,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,72 +544,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 397,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16715 entries, 0 to 16714\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   name             16713 non-null  object \n",
-      " 1   platform         16715 non-null  object \n",
-      " 2   year_of_release  16714 non-null  float64\n",
-      " 3   genre            16713 non-null  object \n",
-      " 4   na_sales         16715 non-null  float64\n",
-      " 5   eu_sales         16715 non-null  float64\n",
-      " 6   jp_sales         16715 non-null  float64\n",
-      " 7   other_sales      16715 non-null  float64\n",
-      " 8   critic_score     16715 non-null  int32  \n",
-      " 9   user_score       7590 non-null   object \n",
-      " 10  rating           9949 non-null   object \n",
-      "dtypes: float64(5), int32(1), object(5)\n",
-      "memory usage: 1.3+ MB\n"
-     ]
-    }
-   ],
    "source": [
-    "df.info()"
+    "Una vez unido el dataframe procedo a revisar de nuevo los valores nulos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 269 entries, 0 to 268\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   name             269 non-null    object \n",
-      " 1   platform         269 non-null    object \n",
-      " 2   year_of_release  268 non-null    float64\n",
-      " 3   genre            269 non-null    object \n",
-      " 4   na_sales         269 non-null    float64\n",
-      " 5   eu_sales         269 non-null    float64\n",
-      " 6   jp_sales         269 non-null    float64\n",
-      " 7   other_sales      269 non-null    float64\n",
-      " 8   critic_score     269 non-null    int32  \n",
-      " 9   user_score       127 non-null    object \n",
-      " 10  rating           181 non-null    object \n",
-      "dtypes: float64(5), int32(1), object(5)\n",
-      "memory usage: 22.2+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "name                  2\n",
+       "platform              0\n",
+       "year_of_release       1\n",
+       "genre                 2\n",
+       "na_sales              0\n",
+       "eu_sales              0\n",
+       "jp_sales              0\n",
+       "other_sales           0\n",
+       "critic_score          0\n",
+       "user_score         9125\n",
+       "rating             6766\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()"
+    "df.isnull().sum()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The analysis makes sense, we have 1 game which never was released (\"Majesty 2: The Fantasy Kingdom Sim\"), we will delete this entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
