--- a/project6_analysis.ipynb
+++ b/project6_analysis.ipynb
@@ -30112,6 +30112,145 @@
     "\n",
     "Japan has more demand on Role-Playing games, followed by action, sports platform and misc genres."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation ESRB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>na_sales</th>\n",
+       "      <th>eu_sales</th>\n",
+       "      <th>jp_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E</td>\n",
+       "      <td>1292.99</td>\n",
+       "      <td>710.25</td>\n",
+       "      <td>198.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>T</td>\n",
+       "      <td>759.75</td>\n",
+       "      <td>427.03</td>\n",
+       "      <td>151.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M</td>\n",
+       "      <td>748.48</td>\n",
+       "      <td>483.97</td>\n",
+       "      <td>64.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E10+</td>\n",
+       "      <td>353.32</td>\n",
+       "      <td>188.52</td>\n",
+       "      <td>40.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>K-A</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>1.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EC</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AO</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>RP</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  rating  na_sales  eu_sales  jp_sales\n",
+       "1      E   1292.99    710.25    198.11\n",
+       "7      T    759.75    427.03    151.40\n",
+       "5      M    748.48    483.97     64.24\n",
+       "2   E10+    353.32    188.52     40.20\n",
+       "4    K-A      2.56      0.27      1.46\n",
+       "3     EC      1.53      0.11      0.00\n",
+       "0     AO      1.26      0.61      0.00\n",
+       "6     RP      0.00      0.08      0.00"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df = df.groupby(by='rating')[regions].sum().reset_index()\n",
+    "rating_df.sort_values(by='na_sales', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Everyone E\n",
+    "Teens T 13+\n",
+    "Mature 17+ M \n",
+    "Everyone +10 E10+\n",
+    "Kids to Adults KA (old, currently Everyone)\n",
+    "Early Childhood EC 3-6 \n",
+    "Adults Only +18\n",
+    "Rating Pending\n",
+    "\n",
+    "\n",
+    "Replace K-A for everyone"
+   ]
   }
  ],
  "metadata": {
