--- a/project6_analysis.ipynb
+++ b/project6_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setting columns to lowercase\n",
-    "df.columns = [column.lower() for column in df.columns]\n"
+    "df.columns = [column.lower() for column in df.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "14244         0.00           NaN        NaN    NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "       24., 21., 17., 22., 13.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -329,13 +329,65 @@
        "array(['E', nan, 'M', 'T', 'E10+', 'K-A', 'AO', 'EC', 'RP'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"rating\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According with the ESRB clasification we can analyze the description of each element with the following table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Rating            | Description                   |\n",
+    "|-------------------|-----------------------------------|\n",
+    "| Everyone (E)      | Suitable for all ages (formerly KA)         |\n",
+    "| Teens 13+ (T)      | Content suitable for ages 13 and older    |\n",
+    "| Mature 17+ (M)     | Content suitable for mature audiences 17 and older  |\n",
+    "| Everyone 10+ (E10+) | Suitable for ages 10 and older  |\n",
+    "| Kids to Adults (KA) | Suitable for kids and adults (currently Everyone)  |\n",
+    "| Early Childhood (EC) | Suitable for ages 3-6   |\n",
+    "| Adults Only 18+ (+18) | Content suitable for adults 18 and older   |\n",
+    "| Rating Pending    | Rating information pending    |\n",
+    "| Replace K-A with Everyone | Update rating from K-A to Everyone  |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to replace Kids to Adults for the current version Everyone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['E', nan, 'M', 'T', 'E10+', 'K-A', 'AO', 'EC', 'RP'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"rating\"].replace('K-A','E')\n",
+    "df['rating'].unique()"
    ]
   },
   {
@@ -30238,19 +30290,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Everyone E\n",
-    "Teens T 13+\n",
-    "Mature 17+ M \n",
-    "Everyone +10 E10+\n",
-    "Kids to Adults KA (old, currently Everyone)\n",
-    "Early Childhood EC 3-6 \n",
-    "Adults Only +18\n",
-    "Rating Pending\n",
-    "\n",
-    "\n",
-    "Replace K-A for everyone"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -30269,7 +30309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
